# pclip_desktop

./: .env.local.sample  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: pr-build.yml  release.yml
.tauri/: debug.key  debug.key.pub
config/: configuration.json
src/: App.vue  axios-adapter.d.ts  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.debug.json  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ConfirmDialog.vue  HelloWorld.vue  Info.vue  JoinRoomDialog.vue  MarkView.vue  MemberCard.vue  MemberSetting.vue  MessageBuble.vue  Pin.vue  ProgressDialog.vue  Room.vue  RoomSetting.vue  RoomSettingDialog.vue  UpdaterDialog.vue  UserInfoDialog.vue
src/composables/: useEventBus.ts  useSupabaseService.ts
src/lib/: input-validator.ts  supabase.ts
src/plugins/: api-service.ts  services.plugins.ts  supabase-service.ts  vuetify.ts
src/router/: index.ts
src/services/: api.service.ts  room.service.ts  supabase.service.ts
src/store/: appStore.ts  authStore.ts
src/styles/: index.scss
src/types/: events.ts  invite.model.d.ts  join-room.model.d.ts  member.model.d.ts  message.model.d.ts  room.model.d.ts
src/utils/: message-encrypter.ts  realtime-wrapper.ts
src/views/: BlankRoomView.vue  JoinRoomDialog.vue  MainView.vue  RoomView.vue  Settings.vue  SignInView.vue  SignUpView.vue
